--- a/index.html
+++ b/index.html
@@ -9,40 +9,60 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.43/moment-timezone-with-data-10-year-range.min.js"></script>
+
     <title>Time Zones Clocks by sarasjodin.com</title>
 </head>
 
 <body>
     <div class="container">
         <h1>Time Zones Clocks</h1>
-    </div>
-    <label for="cities">Select a city</label>
-    <select name="city" id="cities">
-        <option value="">Choose option</option>
-        <option value="stockholm">Stockholm</option>
-        <option value="newyork">New York</option>
-        <option value="auckland">Auckland</option>
-    </select>
+        <select name="city" id="cities">
+            <option value="">Select a city...</option>
+            <option value="stockholm">Stockholm <span role="img" aria-label="Sweden Flag">&#x1F1F8;&#x1F1EA;</span>
+            </option>
+            <option value="newyork">New York 🇺🇸</option>
+            <option value="auckland">Auckland 🇦🇺</option>
+        </select>
 
-    <div class="cities">
-        <h2>Los Angeles</h2>
-        <div class="date">June 26th 2023</div>
-        <div class="time">1:48:15 AM</div>
-        <h2>Sydney</h2>
-        <div class="date">June 26th 2023</div>
-        <div class="time">1:48:15 AM</div>
-        <h2>Tokyo</h2>
-        <div class="date">June 26th 2023</div>
-        <div class="time">1:48:15 AM</div>
-        <h2>London</h2>
-        <div class="date">June 26th 2023</div>
-        <div class="time">1:48:15 AM</div>
+        <div class="city">
+            <div>
+                <h2>Los Angeles 🇺🇸</h2>
+                </h2>
+                <div class="date">June 26th 2023</div>
+            </div>
+            <div class="time">1:48:15 <small>AM</small></div>
+        </div>
+        <div class="city">
+            <div>
+                <h2>Sydney 🇦🇺</h2>
+                </h2>
+                <div class="date">June 26th 2023</div>
+            </div>
+            <div class="time">1:48:15 <small>AM</small></div>
+        </div>
+        <div class="city">
+            <div>
+                <h2>Tokyo 🇯🇵</h2>
+                <div class="date">June 26th 2023</div>
+            </div>
+            <div class="time">1:48:15 <small>AM</small></div>
+        </div>
+        <div class="city">
+            <div>
+                <h2>London 🇬🇧</h2>
+                <div class="date">June 26th 2023</div>
+            </div>
+            <div class="time">1:48:15 <small>AM</small></div>
+        </div>
     </div>
     <footer>
-        This project was coded by <a href="https://www.sarasjodin.com" target="_blank">sarasjodin.com</a> and is open
-        sourced on <a href="https://github.com/sarasjodin/TimeZoneClocks" target="_blank">GitHub</a>
-
+        Coded by <a href="https://www.sarasjodin.com" target="_blank">
+            <strong>sarasjodin.com</strong></a>
+        and is
+        open
+        sourced on <a href="https://github.com/sarasjodin/TimeZoneClocks" target="_blank"><strong>GitHub</strong></a>
     </footer>
+
     <script src="src\index.js">
 
     </script>
