Basic JS code for 4 cities added

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <h1>Time Zones Clocks</h1>
         <select name="city" id="cities">
             <option value="">Select a city...</option>
-            <option value="stockholm">Stockholm <span role="img" aria-label="Sweden Flag">&#x1F1F8;&#x1F1EA;</span>
+            <option value="stockholm">Stockholm 🇸🇪
             </option>
-            <option value="newyork">New York 🇺🇸</option>
+            <option value="new-york">New York 🇺🇸</option>
             <option value="auckland">Auckland 🇦🇺</option>
         </select>
 
-        <div class="city">
+        <div class="city" id="city-1">
             <div>
                 <h2>Los Angeles 🇺🇸</h2>
                 </h2>
@@ -32,24 +32,24 @@
             </div>
             <div class="time">1:48:15 <small>AM</small></div>
         </div>
-        <div class="city">
+        <div class="city" id="city-2">
             <div>
-                <h2>Sydney 🇦🇺</h2>
+                <h2>London 🇬🇧</h2>
                 </h2>
                 <div class="date">June 26th 2023</div>
             </div>
             <div class="time">1:48:15 <small>AM</small></div>
         </div>
-        <div class="city">
+        <div class="city" id="city-3">
             <div>
                 <h2>Tokyo 🇯🇵</h2>
                 <div class="date">June 26th 2023</div>
             </div>
             <div class="time">1:48:15 <small>AM</small></div>
         </div>
-        <div class="city">
+        <div class="city" id="city-4">
             <div>
-                <h2>London 🇬🇧</h2>
+                <h2>Sydney 🇦🇺</h2>
                 <div class="date">June 26th 2023</div>
             </div>
             <div class="time">1:48:15 <small>AM</small></div>
