Placeholder text removed on reload

--- a/index.html
+++ b/index.html
@@ -28,31 +28,31 @@
             <div>
                 <h2>Los Angeles 🇺🇸</h2>
                 </h2>
-                <div class="date">June 26th 2023</div>
+                <div class="date"></div>
             </div>
-            <div class="time">1:48:15 <small>AM</small></div>
+            <div class="time"></div>
         </div>
         <div class="city" id="city-2">
             <div>
                 <h2>London 🇬🇧</h2>
                 </h2>
-                <div class="date">June 26th 2023</div>
+                <div class="date"></div>
             </div>
-            <div class="time">1:48:15 <small>AM</small></div>
+            <div class="time"></div>
         </div>
         <div class="city" id="city-3">
             <div>
                 <h2>Tokyo 🇯🇵</h2>
-                <div class="date">June 26th 2023</div>
+                <div class="date"></div>
             </div>
-            <div class="time">1:48:15 <small>AM</small></div>
+            <div class="time"></div>
         </div>
         <div class="city" id="city-4">
             <div>
                 <h2>Sydney 🇦🇺</h2>
-                <div class="date">June 26th 2023</div>
+                <div class="date"></div>
             </div>
-            <div class="time">1:48:15 <small>AM</small></div>
+            <div class="time"></div>
         </div>
     </div>
     <footer>
