Added the select dropdown js functionality

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 <body>
     <div class="container">
         <h1>Time Zones Clocks</h1>
-        <select name="city" id="cities">
-            <option value="">Select a city...</option>
-            <option value="stockholm">Stockholm 🇸🇪
+        <select id="cities">
+            <option name="city" value="">Select a city...</option>
+            <option value="Europe/Stockholm">Stockholm 🇸🇪
             </option>
-            <option value="new-york">New York 🇺🇸</option>
-            <option value="auckland">Auckland 🇦🇺</option>
+            <option value="America/New_York">New York 🇺🇸</option>
+            <option value="Pacific/Auckland">Auckland 🇦🇺</option>
         </select>
 
         <div class="city" id="city-1">
@@ -63,9 +63,7 @@
         sourced on <a href="https://github.com/sarasjodin/TimeZoneClocks" target="_blank"><strong>GitHub</strong></a>
     </footer>
 
-    <script src="src\index.js">
-
-    </script>
+    <script src="src/index.js"></script>
 </body>
 
 </html>
