--- a/index.html
+++ b/index.html
@@ -63,7 +63,12 @@
         sourced on <a href="https://github.com/sarasjodin/TimeZoneClocks" target="_blank"><strong>GitHub</strong></a>
     </footer>
 
-    <script src="src/index.js"></script>
+    <script src="src/index.js">
+        // Reset dropdown box value to default on page reload
+        window.onload = function () {
+            let citiesSelectElement = document.querySelector("#cities");
+            citiesSelectElement.selectedIndex = 0;
+        };</script>
 </body>
 
 </html>
