--- a/index.html
+++ b/index.html
@@ -6,9 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src\styles.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
     <script
-        src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.43/moment-timezone-with-data-10-year-range.min.js"></script>
+        src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.33/moment-timezone-with-data-10-year-range.min.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const myLocationSelect = document.querySelector("#cities");
+            const currentOption = myLocationSelect.querySelector("#city-local");
+            currentOption.value = moment.tz.guess();
+
+            // Event listener for "My location" select change
+            myLocationSelect.addEventListener("change", function () {
+                if (myLocationSelect.value === "current") {
+                    myLocationSelect.value = moment.tz.guess();
+                }
+            });
+        });
+    </script>
 
     <title>Time Zones Clocks by sarasjodin.com</title>
 </head>
@@ -18,6 +32,8 @@
         <h1>Time Zones Clocks</h1>
         <select id="cities">
             <option name="city" value="">Select a city...</option>
+            <option id="city-local" value="current">My location
+            </option>
             <option value="Europe/Stockholm">Stockholm 🇸🇪
             </option>
             <option value="America/New_York">New York 🇺🇸</option>
@@ -63,12 +79,16 @@
         sourced on <a href="https://github.com/sarasjodin/TimeZoneClocks" target="_blank"><strong>GitHub</strong></a>
     </footer>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.33/moment-timezone-with-data-10-year-range.min.js"></script>
     <script src="src/index.js">
         // Reset dropdown box value to default on page reload
         window.onload = function () {
             let citiesSelectElement = document.querySelector("#cities");
             citiesSelectElement.selectedIndex = 0;
-        };</script>
+        };
+    </script>
 </body>
 
 </html>
